// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get metadata 1`] = `
{
  "dataMetadata": {
    "metaDataVersionOID": "CDISC.ADaM.2.1",
    "studyOID": "CDISCPILOT01",
  },
  "itemGroupMetadata": {
    "items": [
      {
        "OID": "ITEMGROUPDATASEQ",
        "label": "Record Identifier",
        "name": "ITEMGROUPDATASEQ",
        "type": "integer",
      },
      {
        "OID": "ADSL.STUDYID",
        "label": "Study Identifier",
        "length": 12,
        "name": "STUDYID",
        "type": "string",
      },
      {
        "OID": "ADSL.USUBJID",
        "label": "Unique Subject Identifier",
        "length": 11,
        "name": "USUBJID",
        "type": "string",
      },
      {
        "OID": "ADSL.SUBJID",
        "label": "Subject Identifier for the Study",
        "length": 4,
        "name": "SUBJID",
        "type": "string",
      },
      {
        "OID": "ADSL.SITEID",
        "label": "Study Site Identifier",
        "length": 3,
        "name": "SITEID",
        "type": "string",
      },
      {
        "OID": "ADSL.SITEGR1",
        "label": "Pooled Site Group 1",
        "length": 3,
        "name": "SITEGR1",
        "type": "string",
      },
      {
        "OID": "ADSL.ARM",
        "label": "Description of Planned Arm",
        "length": 20,
        "name": "ARM",
        "type": "string",
      },
      {
        "OID": "ADSL.TRT01P",
        "label": "Planned Treatment for Period 01",
        "length": 20,
        "name": "TRT01P",
        "type": "string",
      },
      {
        "OID": "ADSL.TRT01PN",
        "label": "Planned Treatment for Period 01 (N)",
        "length": 8,
        "name": "TRT01PN",
        "type": "integer",
      },
      {
        "OID": "ADSL.TRT01A",
        "label": "Actual Treatment for Period 01",
        "length": 20,
        "name": "TRT01A",
        "type": "string",
      },
      {
        "OID": "ADSL.TRT01AN",
        "label": "Actual Treatment for Period 01 (N)",
        "length": 8,
        "name": "TRT01AN",
        "type": "integer",
      },
      {
        "OID": "ADSL.TRTSDT",
        "label": "Date of First Exposure to Treatment",
        "length": 8,
        "name": "TRTSDT",
        "type": "integer",
      },
      {
        "OID": "ADSL.TRTEDT",
        "label": "Date of Last Exposure to Treatment",
        "length": 8,
        "name": "TRTEDT",
        "type": "integer",
      },
      {
        "OID": "ADSL.TRTDUR",
        "label": "Duration of Treatment (days)",
        "length": 8,
        "name": "TRTDUR",
        "type": "integer",
      },
      {
        "OID": "ADSL.AVGDD",
        "label": "Avg Daily Dose (as planned)",
        "length": 8,
        "name": "AVGDD",
        "type": "float",
      },
      {
        "OID": "ADSL.CUMDOSE",
        "label": "Cumulative Dose (as planned)",
        "length": 8,
        "name": "CUMDOSE",
        "type": "float",
      },
      {
        "OID": "ADSL.AGE",
        "label": "Age",
        "length": 8,
        "name": "AGE",
        "type": "integer",
      },
      {
        "OID": "ADSL.AGEGR1",
        "label": "Pooled Age Group 1",
        "length": 5,
        "name": "AGEGR1",
        "type": "string",
      },
      {
        "OID": "ADSL.AGEGR1N",
        "label": "Pooled Age Group 1 (N)",
        "length": 8,
        "name": "AGEGR1N",
        "type": "integer",
      },
      {
        "OID": "ADSL.AGEU",
        "label": "Age Units",
        "length": 5,
        "name": "AGEU",
        "type": "string",
      },
      {
        "OID": "ADSL.RACE",
        "label": "Race",
        "length": 32,
        "name": "RACE",
        "type": "string",
      },
      {
        "OID": "ADSL.RACEN",
        "label": "Race (N)",
        "length": 8,
        "name": "RACEN",
        "type": "integer",
      },
      {
        "OID": "ADSL.SEX",
        "label": "Sex",
        "length": 1,
        "name": "SEX",
        "type": "string",
      },
      {
        "OID": "ADSL.ETHNIC",
        "label": "Ethnicity",
        "length": 22,
        "name": "ETHNIC",
        "type": "string",
      },
      {
        "OID": "ADSL.SAFFL",
        "label": "Safety Population Flag",
        "length": 1,
        "name": "SAFFL",
        "type": "string",
      },
      {
        "OID": "ADSL.ITTFL",
        "label": "Intent-To-Treat Population Flag",
        "length": 1,
        "name": "ITTFL",
        "type": "string",
      },
      {
        "OID": "ADSL.EFFFL",
        "label": "Efficacy Population Flag",
        "length": 1,
        "name": "EFFFL",
        "type": "string",
      },
      {
        "OID": "ADSL.COMP8FL",
        "label": "Completers of Week 8 Population Flag",
        "length": 1,
        "name": "COMP8FL",
        "type": "string",
      },
      {
        "OID": "ADSL.COMP16FL",
        "label": "Completers of Week 16 Population Flag",
        "length": 1,
        "name": "COMP16FL",
        "type": "string",
      },
      {
        "OID": "ADSL.COMP24FL",
        "label": "Completers of Week 24 Population Flag",
        "length": 1,
        "name": "COMP24FL",
        "type": "string",
      },
      {
        "OID": "ADSL.DISCONFL",
        "label": "Did the Subject Discontinue the Study?",
        "length": 1,
        "name": "DISCONFL",
        "type": "string",
      },
      {
        "OID": "ADSL.DSRAEFL",
        "label": "Discontinued due to AE?",
        "length": 1,
        "name": "DSRAEFL",
        "type": "string",
      },
      {
        "OID": "ADSL.DTHFL",
        "label": "Subject Died?",
        "length": 1,
        "name": "DTHFL",
        "type": "string",
      },
      {
        "OID": "ADSL.BMIBL",
        "label": "Baseline BMI (kg/m^2)",
        "length": 8,
        "name": "BMIBL",
        "type": "float",
      },
      {
        "OID": "ADSL.BMIBLGR1",
        "label": "Pooled Baseline BMI Group 1",
        "length": 6,
        "name": "BMIBLGR1",
        "type": "string",
      },
      {
        "OID": "ADSL.HEIGHTBL",
        "label": "Baseline Height (cm)",
        "length": 8,
        "name": "HEIGHTBL",
        "type": "float",
      },
      {
        "OID": "ADSL.WEIGHTBL",
        "label": "Baseline Weight (kg)",
        "length": 8,
        "name": "WEIGHTBL",
        "type": "float",
      },
      {
        "OID": "ADSL.EDUCLVL",
        "label": "Years of Education",
        "length": 8,
        "name": "EDUCLVL",
        "type": "integer",
      },
      {
        "OID": "ADSL.DISONSDT",
        "label": "Date of Onset of Disease",
        "length": 8,
        "name": "DISONSDT",
        "type": "integer",
      },
      {
        "OID": "ADSL.DURDIS",
        "label": "Duration of Disease (Months)",
        "length": 8,
        "name": "DURDIS",
        "type": "float",
      },
      {
        "OID": "ADSL.DURDSGR1",
        "label": "Pooled Disease Duration Group 1",
        "length": 4,
        "name": "DURDSGR1",
        "type": "string",
      },
      {
        "OID": "ADSL.VISIT1DT",
        "label": "Date of Visit 1",
        "length": 8,
        "name": "VISIT1DT",
        "type": "integer",
      },
      {
        "OID": "ADSL.RFSTDTC",
        "label": "Subject Reference Start Date/Time",
        "length": 20,
        "name": "RFSTDTC",
        "type": "string",
      },
      {
        "OID": "ADSL.RFENDTC",
        "label": "Subject Reference End Date/Time",
        "length": 20,
        "name": "RFENDTC",
        "type": "string",
      },
      {
        "OID": "ADSL.VISNUMEN",
        "label": "End of Trt Visit (Vis 12 or Early Term.)",
        "length": 8,
        "name": "VISNUMEN",
        "type": "integer",
      },
      {
        "OID": "ADSL.RFENDT",
        "label": "Date of Discontinuation/Completion",
        "length": 8,
        "name": "RFENDT",
        "type": "integer",
      },
      {
        "OID": "ADSL.DCDECOD",
        "label": "Standardized Disposition Term",
        "length": 27,
        "name": "DCDECOD",
        "type": "string",
      },
      {
        "OID": "ADSL.DCREASCD",
        "label": "Reason for Discontinuation",
        "length": 18,
        "name": "DCREASCD",
        "type": "string",
      },
      {
        "OID": "ADSL.MMSETOT",
        "label": "MMSE Total",
        "length": 8,
        "name": "MMSETOT",
        "type": "integer",
      },
    ],
    "label": "Subject-Level Analysis",
    "name": "ADSL",
    "records": 254,
  },
}
`;

exports[`Get metadata when some attributes are after rows 1`] = `
{
  "columns": [
    {
      "dataType": "integer",
      "itemOID": "ITEMGROUPDATASEQ",
      "label": "Record Identifier",
      "name": "ITEMGROUPDATASEQ",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.STUDYID",
      "label": "Study Identifier",
      "length": 12,
      "name": "STUDYID",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.USUBJID",
      "keySequence": 1,
      "label": "Unique Subject Identifier",
      "length": 11,
      "name": "USUBJID",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.SUBJID",
      "label": "Subject Identifier for the Study",
      "length": 4,
      "name": "SUBJID",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.SITEID",
      "label": "Study Site Identifier",
      "length": 3,
      "name": "SITEID",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.SITEGR1",
      "label": "Pooled Site Group 1",
      "length": 3,
      "name": "SITEGR1",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.ARM",
      "label": "Description of Planned Arm",
      "length": 20,
      "name": "ARM",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.TRT01P",
      "label": "Planned Treatment for Period 01",
      "length": 20,
      "name": "TRT01P",
    },
    {
      "dataType": "integer",
      "itemOID": "IT.ADSL.TRT01PN",
      "label": "Planned Treatment for Period 01 (N)",
      "name": "TRT01PN",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.TRT01A",
      "label": "Actual Treatment for Period 01",
      "length": 20,
      "name": "TRT01A",
    },
    {
      "dataType": "integer",
      "itemOID": "IT.ADSL.TRT01AN",
      "label": "Actual Treatment for Period 01 (N)",
      "name": "TRT01AN",
    },
    {
      "dataType": "date",
      "displayFormat": "E8601DA.",
      "itemOID": "IT.ADSL.TRTSDT",
      "label": "Date of First Exposure to Treatment",
      "name": "TRTSDT",
      "targetDataType": "integer",
    },
    {
      "dataType": "date",
      "displayFormat": "E8601DA.",
      "itemOID": "IT.ADSL.TRTEDT",
      "label": "Date of Last Exposure to Treatment",
      "name": "TRTEDT",
      "targetDataType": "integer",
    },
    {
      "dataType": "integer",
      "itemOID": "IT.ADSL.TRTDURD",
      "label": "Total Treatment Duration (Days)",
      "name": "TRTDURD",
    },
    {
      "dataType": "float",
      "itemOID": "IT.ADSL.AVGDD",
      "label": "Avg Daily Dose (as planned)",
      "name": "AVGDD",
    },
    {
      "dataType": "float",
      "itemOID": "IT.ADSL.CUMDOSE",
      "label": "Cumulative Dose (as planned)",
      "name": "CUMDOSE",
    },
    {
      "dataType": "integer",
      "itemOID": "IT.ADSL.AGE",
      "label": "Age",
      "name": "AGE",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.AGEGR1",
      "label": "Pooled Age Group 1",
      "length": 5,
      "name": "AGEGR1",
    },
    {
      "dataType": "integer",
      "itemOID": "IT.ADSL.AGEGR1N",
      "label": "Pooled Age Group 1 (N)",
      "name": "AGEGR1N",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.AGEU",
      "label": "Age Units",
      "length": 5,
      "name": "AGEU",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.RACE",
      "label": "Race",
      "length": 32,
      "name": "RACE",
    },
    {
      "dataType": "integer",
      "itemOID": "IT.ADSL.RACEN",
      "label": "Race (N)",
      "name": "RACEN",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.SEX",
      "label": "Sex",
      "length": 1,
      "name": "SEX",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.ETHNIC",
      "label": "Ethnicity",
      "length": 22,
      "name": "ETHNIC",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.SAFFL",
      "label": "Safety Population Flag",
      "length": 1,
      "name": "SAFFL",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.ITTFL",
      "label": "Intent-To-Treat Population Flag",
      "length": 1,
      "name": "ITTFL",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.EFFFL",
      "label": "Efficacy Population Flag",
      "length": 1,
      "name": "EFFFL",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.COMP8FL",
      "label": "Completers of Week 8 Population Flag",
      "length": 1,
      "name": "COMP8FL",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.COMP16FL",
      "label": "Completers of Week 16 Population Flag",
      "length": 1,
      "name": "COMP16FL",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.COMP24FL",
      "label": "Completers of Week 24 Population Flag",
      "length": 1,
      "name": "COMP24FL",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.DISCONFL",
      "label": "Did the Subject Discontinue the Study?",
      "length": 1,
      "name": "DISCONFL",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.DSRAEFL",
      "label": "Discontinued due to AE?",
      "length": 1,
      "name": "DSRAEFL",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.DTHFL",
      "label": "Subject Died?",
      "length": 1,
      "name": "DTHFL",
    },
    {
      "dataType": "float",
      "itemOID": "IT.ADSL.BMIBL",
      "label": "Baseline BMI (kg/m^2)",
      "name": "BMIBL",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.BMIBLGR1",
      "label": "Pooled Baseline BMI Group 1",
      "length": 6,
      "name": "BMIBLGR1",
    },
    {
      "dataType": "float",
      "itemOID": "IT.ADSL.HEIGHTBL",
      "label": "Baseline Height (cm)",
      "name": "HEIGHTBL",
    },
    {
      "dataType": "float",
      "itemOID": "IT.ADSL.WEIGHTBL",
      "label": "Baseline Weight (kg)",
      "name": "WEIGHTBL",
    },
    {
      "dataType": "integer",
      "itemOID": "IT.ADSL.EDUCLVL",
      "label": "Years of Education",
      "name": "EDUCLVL",
    },
    {
      "dataType": "date",
      "displayFormat": "E8601DA.",
      "itemOID": "IT.ADSL.DISONSDT",
      "label": "Date of Onset of Disease",
      "name": "DISONSDT",
      "targetDataType": "integer",
    },
    {
      "dataType": "float",
      "itemOID": "IT.ADSL.DURDIS",
      "label": "Duration of Disease (Months)",
      "name": "DURDIS",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.DURDSGR1",
      "label": "Pooled Disease Duration Group 1",
      "length": 4,
      "name": "DURDSGR1",
    },
    {
      "dataType": "date",
      "displayFormat": "E8601DA.",
      "itemOID": "IT.ADSL.VISIT1DT",
      "label": "Date of Visit 1",
      "name": "VISIT1DT",
      "targetDataType": "integer",
    },
    {
      "dataType": "datetime",
      "itemOID": "IT.ADSL.RFSTDTC",
      "label": "Subject Reference Start Date/Time",
      "name": "RFSTDTC",
    },
    {
      "dataType": "datetime",
      "itemOID": "IT.ADSL.RFENDTC",
      "label": "Subject Reference End Date/Time",
      "name": "RFENDTC",
    },
    {
      "dataType": "integer",
      "itemOID": "IT.ADSL.VISNUMEN",
      "label": "End of Trt Visit (Vis 12 or Early Term.)",
      "name": "VISNUMEN",
    },
    {
      "dataType": "date",
      "displayFormat": "E8601DA.",
      "itemOID": "IT.ADSL.RFENDT",
      "label": "Date of Discontinuation/Completion",
      "name": "RFENDT",
      "targetDataType": "integer",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.DCDECOD",
      "label": "Standardized Disposition Term",
      "length": 27,
      "name": "DCDECOD",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.EOSSTT",
      "label": "End of Study Status",
      "length": 12,
      "name": "EOSSTT",
    },
    {
      "dataType": "string",
      "itemOID": "IT.ADSL.DCSREAS",
      "label": "Reason for Discontinuation from Study",
      "length": 18,
      "name": "DCSREAS",
    },
    {
      "dataType": "integer",
      "itemOID": "IT.ADSL.MMSETOT",
      "label": "MMSE Total",
      "name": "MMSETOT",
    },
  ],
  "datasetJSONCreationDateTime": "",
  "datasetJSONVersion": "",
  "dbLastModifiedDateTime": "2024-08-05T10:08:46",
  "fileOID": "www.cdisc.org/StudyMSGv1/1/Define-XML_2.1.0/2024-08-05/adsl",
  "isReferenceData": false,
  "itemGroupOID": "IG.ADSL",
  "label": "Subject-Level Analysis",
  "metaDataRef": "define.xml",
  "metaDataVersionOID": "MDV.TDF_ADaM.ADaMIG.1.1",
  "name": "ADSL",
  "originator": "CDISC ADaM MSG Team",
  "records": 254,
  "sourceSystem": {
    "name": "SAS on X64_10PRO",
    "version": "9.0401M7",
  },
  "studyOID": "TDF_ADaM.ADaMIG.1.1",
}
`;
